# Share-Music

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  compose.yaml  config.defaults.yaml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: build.yaml  build_and_deploy.yaml  enforce_conventional_commits.yaml  new-sentry-release.yaml
bot/: __init__.py  __main__.py  bot.py  config.py  factory.py
bot/cogs/: credits.py  share.py
bot/cogs/musicshare/: credits.py  share.py
bot/cogs/utility/: general.py
bot/exts/: credits.py  metrics.py  share.py
bot/utils/: extensions.py  logging.py  metrics.py  sentry.py
bot/utils/monkey_patch/: __init__.py
bot/utils/monkey_patch/discord/: gateway.py  http.py
migration/: Cargo.toml
migration/src/: lib.rs  m20260604_01_create_usage_table.rs  m20260607_01_store_metadata.rs  main.rs
src/: args.rs  color_config.rs  constants.rs  event_handler.rs  http_server.rs  main.rs  shard_runners.rs
src/clients/: discord.rs  mod.rs
src/clients/colour/: hsl_pixel.rs  mod.rs  pixel_group.rs  rgb_pixel.rs
src/clients/odesli/: api_type.rs  cache.rs  error.rs  mod.rs  ratelimiter.rs  shared_queue.rs
src/clients/odesli/provider_id/: mod.rs  parse.rs
src/commands/: error.rs  find_links.rs  mod.rs  share.rs  test_colour_consts.rs
src/config/: colour.rs  discord.rs  logging.rs  metrics.rs  mod.rs
src/context/: discord_cache.rs  discord_client.rs  discord_cluster.rs  http_client.rs  metrics.rs  mod.rs  state.rs  status_server.rs
src/context/metrics/: guild_store.rs  mod.rs
src/db/: guild_meta.rs  mod.rs  usage_data.rs  user_meta.rs  util.rs
src/db/entity/: command_usage.rs  discord_guild.rs  discord_user.rs  mod.rs  sea_orm_active_enums.rs
src/handlers/: metrics.rs  mod.rs
src/handlers/interactions/: common.rs  find_links.rs  messages.rs  mod.rs  share.rs  show_player.rs  test_colour_consts.rs
src/handlers/interactions/share/: messages.rs  mod.rs
src/interactions/: mod.rs  utils.rs
src/interactions/commands/: find_links.rs  mod.rs  share.rs  test_colour_consts.rs
src/interactions/handlers/: common.rs  find_links.rs  messages.rs  mod.rs  share.rs  show_player.rs  test_colour_consts.rs
src/metrics/: guild_metrics.rs  labels.rs  mod.rs  shard_states.rs  store.rs
src/util/: atomic_queue.rs  discord_locales.rs  error.rs  event_poller.rs  interaction.rs  message_command.rs  metric_utils.rs  mod.rs  panic_utils.rs  parser.rs  setup_logger.rs  shard_poller.rs  signal.rs  termination_future.rs  token_bucket.rs
src/util/colour/: hsl_pixel.rs  mod.rs  pixel_group.rs  rgb_pixel.rs
src/util/odesli/: api_type.rs  cache.rs  endpoints.rs  error.rs  mod.rs  ratelimiter.rs  shared_queue.rs
src/util/odesli/provider_id/: mod.rs  parse.rs
