[package]
name = "share-music"
version = "3.6.3"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { default-features = false, version = "0.3" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2", "charset", "json"] }
image = "0.25"
itertools = "0.14"
lazy-regex = "3.4"
parking_lot = "0.12"
prometheus-client = "0.23"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
this-state = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "parking_lot", "registry", "env-filter"] }
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
twilight-util = { version = "0.16", features = ["builder", "permission-calculator"] }
url = "2.5"
serde_yaml = "0.9.34"  # 0.9.34+deprecated
