[package]
name = "share-music"
version = "3.7.3"
edition = "2024"
publish = false
build = "build.rs"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

axum = "0.8"
clap = { version = "4.6", features = ["derive", "env"] }
dashmap = "6.2"
futures-util = { default-features = false, version = "0.3" }
reqwest = { version = "0.13", features = ["json"] }
image = "0.25"
itertools = "0.14"
lazy-regex = "3.6"
parking_lot = "0.12"
prometheus-client = "0.24"
regex = "1.12"
sea-orm = { version = "1.1", features = ["runtime-tokio", "sqlx-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
this-state = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "parking_lot", "registry", "env-filter"] }
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-util = { version = "0.17", features = ["builder", "permission-calculator"] }
url = "2.5"
serde_yaml = "0.9.34"  # 0.9.34+deprecated
